--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "Kahrbaa",
-  "version": "2.1.0",
-  "description": "-- Script Spam , Farm Credit By Kahrbaa --",
+  "name": "n3k4a",
+  "description": "n3k4a",
+  "version": "0.0.0",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "discord.js": "^11.3.2",
+   "discord.js": "^11.3.2",
     "fs": "^0.0.2",
-    "node-opus": "^0.2.7",
-    "opusscript": "0.0.6",
-  "request": "^2.85.0"
-  },
-  "engines": {
-    "node": "8.x"
+    "giphy-api": "1.2.7",
+    "math-expression-evaluator":"1.2.17",
+    "common-tags":"1.7.2",
+    "moment":"2.22.2",
+     "canvas":"1.6.11",
+    "jimp":"0.3.5",
+    "hastebin-gen":"1.3.1",
+    "google-translate-api":"2.3.0",
+    "ascii-data-table":"2.1.1"
   }
 }
